# kedro-coffee-chat-load-node

./: README.md  pyproject.toml  requirements.txt
mlruns/0/: meta.yaml
mlruns/449336583953921229/: meta.yaml
mlruns/449336583953921229/add1f5a514614567a764e053d63e203f/: meta.yaml
mlruns/449336583953921229/add1f5a514614567a764e053d63e203f/tags/: project_path  runner  session_id
notebooks/: load_node.ipynb  load_node_copy.ipynb
src/coffee_chat/: __init__.py  __main__.py  airbyte_dataset.py  settings.py
src/coffee_chat/pipelines/data_processing/: nodes.py
