[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "coffee_chat"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
coffee-chat = "coffee_chat.__main__:main"

[tool.kedro]
package_name = "coffee_chat"
project_name = "coffee-chat"
kedro_init_version = "0.19.3"
tools = [ "Linting",]
example_pipeline = "True"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "coffee_chat.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
